--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
           </header>
           <nav>
             <ul class="menu">
-              <li><a href="#features">Features</a></li>
+              <li><a href="/#features">Features</a></li>
+              <li><a href="/docs.html">Docs</a></li>
               <li><a href="https://github.com/Nafta7/vanilka">Download</a></li>
             </ul>
           </nav>
