--- a/docs.html
+++ b/docs.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- build:css main.all.css-->
-    <link rel="stylesheet" href="main.css">
-    <!-- endbuild-->
+    <link rel="stylesheet" href="main.all.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vanilka - a minimal Wordpress starter theme.</title>
   </head>
@@ -16,8 +14,8 @@
           </header>
           <nav>
             <ul class="menu">
-              <li><a href="/#features">Features</a></li>
-              <li><a href="/docs.html">Docs</a></li>
+              <li><a href="index.html#features">Features</a></li>
+              <li><a href="docs.html">Docs</a></li>
               <li><a href="https://github.com/Nafta7/vanilka">Download</a></li>
             </ul>
           </nav>
