--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="container">
         <div class="header">
           <header>
-            <h1 class="logo-title"><a href="/">Vanilka</a></h1>
+            <h1 class="logo-title"><a href="index.html">Vanilka</a></h1>
           </header>
           <nav>
             <ul class="menu">
