--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="menu">
               <li><a href="index.html#features">Features</a></li>
               <li><a href="docs.html">Docs</a></li>
-              <li><a href="https://github.com/Nafta7/vanilka">Download</a></li>
+              <li><a href="https://github.com/Nefla/vanilka">Download</a></li>
             </ul>
           </nav>
         </div>
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="billboard">
           <h1 class="billboard-title">Vanilka</h1>
-          <h2 class="billboard-sub-title">a minimal Wordpress starter theme.   </h2><a class="btn btn-inverse btn-large" href="https://github.com/Nafta7/vanilka">
+          <h2 class="billboard-sub-title">a minimal Wordpress starter theme.   </h2><a class="btn btn-inverse btn-large" href="https://github.com/Nefla/vanilka">
              Download</a>
         </div>
       </div>
@@ -123,7 +123,7 @@
           <div>
             <p>Vanilka is open-sourced under the MIT license.</p>
           </div>
-          <div class="button-group"><a class="btn btn-inverse" href="https://github.com/Nafta7/vanilka">Github</a></div>
+          <div class="button-group"><a class="btn btn-inverse" href="https://github.com/Nefla/vanilka">Github</a></div>
         </div>
       </div>
     </section>
